Added a salesforce integration (very basic) and an attempt to add Jira integration (canceled by some circumstances but I'd like to maintain it in the code for future references).

--- a/FormsCreator/appsettings.json
+++ b/FormsCreator/appsettings.json
@@ -26,5 +26,20 @@
       "ClientId": "",
       "ClientSecret": ""
     }
+  },
+  "Salesforce": {
+    "ClientId": "",
+    "ClientSecret": "",
+    "Username": "",
+    "Password": "",
+    "LoginUrl": "https://login.salesforce.com/services/oauth2/token",
+    "RestAccountUrl": "https://acc.salesforce.com/services/data/v58.0/sobjects/Account",
+    "RestContactUrl": "https://acc.salesforce.com/services/data/v58.0/sobjects/Contact",
+    "RestQueryUrl": "https://acc.salesforce.com/services/data/v58.0/query?q="
+  },
+  "Atlassian": {
+    "ApiToken": "",
+    "ProjectName": "",
+    "ApiUrl": ""
   }
 }
